force-app/main/default/objects/Contract/fields/Actual_ACV__c.field-meta.xml
<CustomField>
    <fullName>Actual_ACV__c</fullName>
    <description>CATM - ACV without Setup and One Time Revenue Charges</description>
    <inlineHelpText>ACV without Setup and One Time Revenue Charges</inlineHelpText>
    <label>Actual ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>