force-app/main/default/objects/Contract/fields/Actual_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Live_Date__c</fullName>
    <description>CATM</description>
    <label>Actual Live Date</label>
    <type>Date</type>
</CustomField>