force-app/main/default/objects/Contract/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value__c</fullName>
    <description>CATM</description>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>