force-app/main/default/objects/Contract/fields/ATM_Type__c.field-meta.xml
<CustomField>
    <fullName>ATM_Type__c</fullName>
    <description>CATM</description>
    <inlineHelpText>INT - Internal (lobby) ATM 
TTW - Through The Wall or Through the Glass ATM
POD - Weatherized Stand Alone ATM
Mini POD - stand alone ATM</inlineHelpText>
    <label>ATM Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>TTW</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Mini POD</fullName>
            </value>
            <value>
                <fullName>Cash Deposit (Back Office)</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>