force-app/main/default/objects/Contract/fields/CATM_Contract_Formula__c.field-meta.xml
<CustomField>
    <fullName>CATM_Contract_Formula__c</fullName>
    <label>CATM Contract #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>