force-app/main/default/objects/Contract/fields/CATM_Record__c.field-meta.xml
<CustomField>
    <fullName>CATM_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CATM Record</label>
    <type>Checkbox</type>
</CustomField>