force-app/main/default/objects/Contract/fields/Contract_End_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM</description>
    <label>Contract End Date Override?</label>
    <type>Checkbox</type>
</CustomField>