force-app/main/default/objects/Contract/fields/Contract_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Reason__c</fullName>
    <description>CATM</description>
    <label>Contract Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>12 Months Rolling</fullName>
            </value>
            <value>
                <fullName>6 Months Rolling</fullName>
            </value>
            <value>
                <fullName>Asset Sales/Purchase</fullName>
            </value>
            <value>
                <fullName>Attack</fullName>
            </value>
            <value>
                <fullName>Not Profitable</fullName>
                <label>Business Decision - Not Profitable</label>
            </value>
            <value>
                <fullName>Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Customer Contract Breach</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Failed Installation</fullName>
            </value>
            <value>
                <fullName>Landlord/Planning Consent Decline</fullName>
            </value>
            <value>
                <fullName>Long Term Contract</fullName>
            </value>
            <value>
                <fullName>Missing Contract</fullName>
            </value>
            <value>
                <fullName>Not at Risk</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Tenancy At Will</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>