force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>CATM</description>
    <label>Contract Type (CATM)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BankMachine</fullName>
            </value>
            <value>
                <fullName>Cardpoint</fullName>
            </value>
            <value>
                <fullName>Cashzone</fullName>
            </value>
            <value>
                <fullName>CT Standard Template</fullName>
            </value>
            <value>
                <fullName>CTUK 1.4</fullName>
            </value>
            <value>
                <fullName>CTUK 1.5 (MR)</fullName>
            </value>
            <value>
                <fullName>CTUK 1.6</fullName>
            </value>
            <value>
                <fullName>CTUK 1.6 (CIT)</fullName>
            </value>
            <value>
                <fullName>CTuK 1.7 (CIT)</fullName>
            </value>
            <value>
                <fullName>DCPayments</fullName>
            </value>
            <value>
                <fullName>Distributor Agreement</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Money Box</fullName>
            </value>
            <value>
                <fullName>OmniCash</fullName>
            </value>
            <value>
                <fullName>SSG</fullName>
            </value>
            <value>
                <fullName>Temp Event</fullName>
            </value>
            <value>
                <fullName>Travelex</fullName>
            </value>
            <value>
                <fullName>New Install</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>COO + Exchange</fullName>
            </value>
            <value>
                <fullName>COO + Funding Conversion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal + COO</fullName>
            </value>
            <value>
                <fullName>Renewal + Exchange</fullName>
            </value>
            <value>
                <fullName>Renewal + Funding Conversion</fullName>
            </value>
            <value>
                <fullName>Renewal + COO + Exchange</fullName>
            </value>
            <value>
                <fullName>Renewal + COO + Funding Conversion</fullName>
            </value>
            <value>
                <fullName>Renewal + COO + Funding Conversion + Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>