force-app/main/default/objects/Contract/fields/CPQ__c.field-meta.xml
<CustomField>
    <fullName>CPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPQ</label>
    <type>Checkbox</type>
</CustomField>