force-app/main/default/objects/Contract/fields/Days_till_Contract_Expiring__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Contract_Expiring__c</fullName>
    <description>CATM</description>
    <formula>EndDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Contract Expiring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>