force-app/main/default/objects/Contract/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>CATM</description>
    <formula>Opportunity__r.Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>