force-app/main/default/objects/Contract/fields/EBITA_Annualized__c.field-meta.xml
<CustomField>
    <fullName>EBITA_Annualized__c</fullName>
    <description>CATM</description>
    <label>EBITA (Annualized)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>