force-app/main/default/objects/Contract/fields/Finance_Contracts_Admin__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contracts_Admin__c</fullName>
    <description>CATM</description>
    <label>Finance Contracts Admin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amber Thornhill</fullName>
            </value>
            <value>
                <fullName>Chaitali Pandya</fullName>
            </value>
            <value>
                <fullName>Helena Zaytseva</fullName>
            </value>
            <value>
                <fullName>Jo Davies</fullName>
            </value>
            <value>
                <fullName>Mason Song</fullName>
            </value>
            <value>
                <fullName>Sarah Randall</fullName>
            </value>
            <value>
                <fullName>Virginie Hofmann</fullName>
            </value>
            <value>
                <fullName>Kerry Anthony</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>