force-app/main/default/objects/Contract/fields/Finance_Contracts_Admin_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contracts_Admin_Status_Date__c</fullName>
    <description>CATM</description>
    <label>Finance Contracts Admin Status Date</label>
    <type>Date</type>
</CustomField>