force-app/main/default/objects/Contract/fields/FTU_PTU__c.field-meta.xml
<CustomField>
    <fullName>FTU_PTU__c</fullName>
    <description>CATM</description>
    <label>FTU/PTU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTU</fullName>
            </value>
            <value>
                <fullName>PTU</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>