force-app/main/default/objects/Contract/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <description>CATM</description>
    <formula>Opportunity__r.Geography__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geography</label>
    <type>Text</type>
</CustomField>