force-app/main/default/objects/Contract/fields/Incremental_ACV__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ACV__c</fullName>
    <description>CATM</description>
    <label>Incremental ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>