force-app/main/default/objects/Contract/fields/Is_Processed_By_Contract_End_Batch__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed_By_Contract_End_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to TRUE by CPQ_ProcessContractEndBatch batch class. This class picks the Contract which are Ended or Terminated and process them and set this flag to true.</description>
    <label>Is Processed By Contract End Batch</label>
    <type>Checkbox</type>
</CustomField>