force-app/main/default/objects/Contract/fields/Merchant_Fees_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Fees_Annualized__c</fullName>
    <description>CATM</description>
    <label>Annual Merchant Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>