force-app/main/default/objects/Contract/fields/Num_of_ATMs_Associated_with_Contract__c.field-meta.xml
<CustomField>
    <fullName>Num_of_ATMs_Associated_with_Contract__c</fullName>
    <description>CATM</description>
    <label>Num of ATMs/Units Assoc with Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>