force-app/main/default/objects/Contract/fields/OEN_in_Past__c.field-meta.xml
<CustomField>
    <fullName>OEN_in_Past__c</fullName>
    <description>CATM</description>
    <formula>Today() &gt;  Owner_Expiration_Notice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEN in Past</label>
    <type>Checkbox</type>
</CustomField>