force-app/main/default/objects/Contract/fields/Owner_Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>Owner_Expiration_Notice__c</fullName>
    <description>CATM</description>
    <label>Owner Expiration Notice (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>135</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>270</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>