force-app/main/default/objects/Contract/fields/Owner_Expiration_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Expiration_Notice_Date__c</fullName>
    <description>CATM</description>
    <label>Last Day of Owner Expiration</label>
    <type>Date</type>
</CustomField>