force-app/main/default/objects/Contract/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Competitor</label>
    <referenceTo>Competitors__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>