force-app/main/default/objects/Contract/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>CATM</description>
    <label>Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>