force-app/main/default/objects/Contract/fields/qtc_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>qtc_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be set on account creation from the Order. The user can then update this field to update Bill To Site on related Orders.</description>
    <label>Bill To Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Bill_To__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>