force-app/main/default/objects/Contract/fields/qtc_Subscription_Fee_per_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>qtc_Subscription_Fee_per_Billing_Period__c</fullName>
    <description>Display Subscription Fee per Billing Period on Contract page. This is the sum of all orders(contracted) Subscription_Fee_per_Billing_Period .</description>
    <label>Subscription Fee per Billing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>