force-app/main/default/objects/Contract/fields/qtc_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>qtc_Termination_Date__c</fullName>
    <description>Date, when the contract is terminated.</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>