force-app/main/default/objects/Contract/fields/Rates_Liability__c.field-meta.xml
<CustomField>
    <fullName>Rates_Liability__c</fullName>
    <description>CATM</description>
    <label>Rates Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardtronics</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>