force-app/main/default/objects/Contract/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>CATM</description>
    <formula>Opportunity__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATM Region</label>
    <type>Text</type>
</CustomField>