force-app/main/default/objects/Contract/fields/Remaining_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term_in_Months__c</fullName>
    <formula>IF(StartDate  &lt;= Today(), IF(
(EndDate - Today()) / 365 * 12 &lt; 1, 1, CEILING((EndDate - Today()) / 365 * 12
)), ContractTerm )</formula>
    <label>Remaining Term (in Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>