force-app/main/default/objects/Contract/fields/Renewal_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Period_Months__c</fullName>
    <description>CATM</description>
    <label>Renewal Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>