force-app/main/default/objects/Contract/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <description>CATM</description>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Extension</fullName>
            </value>
            <value>
                <fullName>Fixed End Date</fullName>
            </value>
            <value>
                <fullName>Option to Extend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>