force-app/main/default/objects/Contract/fields/Replen_Method__c.field-meta.xml
<CustomField>
    <fullName>Replen_Method__c</fullName>
    <description>CATM</description>
    <inlineHelpText>CIT - Cash In Transit (Cardtronics cash fill ATM)
MR - Merchant fills ATM</inlineHelpText>
    <label>Replen Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIT</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>