force-app/main/default/objects/Contract/fields/TID__c.field-meta.xml
<CustomField>
    <fullName>TID__c</fullName>
    <description>CATM</description>
    <inlineHelpText>Terminal ID</inlineHelpText>
    <label>TID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>