force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer - New Solution/Service</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Ongoing Roll-out</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Replacement</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Service Renewal</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Service Winback</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Upgrade</fullName>
            </value>
            <value>
                <fullName>Existing Customer - PS Custom Work</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Back Billing</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Service Termination</fullName>
            </value>
            <value>
                <fullName>Existing Customer - ATMaaS</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>New Customer - ATMaaS</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Indirect Channel</fullName>
            </value>
            <value>
                <fullName>Revenue Leakage</fullName>
            </value>
            <value>
                <fullName>One-Time Payment Project</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Pilot</fullName>
            </value>
            <value>
                <fullName>New Customer - Pilot</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Subscription Amendment</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Subscription Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>